  turned off.
* Introduced improved repr for ``Page``, ``Title``, ``Placeholder`` and ``CMSPlugin`` models.
* Fixed a regression which prevented users from setting a redirect to the homepage.
* Fixed a bug where the add page endpoint rendered ``Change page`` as the html title.
* Fixed an issue where non-staff users could request the wizard create endpoint.


=== 3.4.4 (unreleased) ===

* Fixed a bug where canceling the publishing dialog wasn't respected.
* Fixed a bug when after authentication us redirected on wrong url (site have only one language)
* Changed the signature for internal ``cms.plugin_base.CMSPluginBase`` methods ``get_child_classes``
  and ``get_parent_classes`` to take an optional ``instance`` parameter.
* Fixed error in retrieving placeholder label from configuration.
* Fixed a bug which caused certain translations to display double escaped text on the page
  list admin view.
* Adjusted the toolbar javascript template to escape values coming from the request.
* Added Dropdown class to toolbar items
* Replaced all custom markup on the ``admin/cms/page/includes/fieldset.html`` template
  with an ``{% include %}`` call to Django's builtin ``fieldset.html`` template.
* Fixed a bug which prevented a page from being marked as dirty when a placeholder was cleared.
* Fixed an IntegrityError raised when publishing a page with no public version and whose publisher
  state is pending.
* Fixed an issue with JS not being able to determine correct path to async bundle
* Fixed a ``DoesNotExist`` db error raised when moving a page marked as published but whose public
  translation does not exist.
* Fixed a bug where the menu would render nodes using the site session variable (set in the admin),
  instead of the current request site.
* Fixed a race condition bug where the cache keys on the database were deleted without syncing with the
  cache server and as a result old menu items would continue to be displayed.